# ProjectEuler

./: CMakeLists.txt
.github/workflows/: projectEuler.yml
src/: CMakeLists.txt  MainApp.cpp  Problems.cpp  Problems.h
test/: CMakeLists.txt  gTests.cpp
